--- a/README
+++ b/README
@@ -8,4 +8,4 @@ test.py:  test program
 1) run 'python setup.py build_ext --inplace'
 2) run test.py
 
-Uses approach outlined in (Pletzer et al (2008))[https://www.computer.org/cms/ComputingNow/homepage/0808/ExposingFortranDerivedTypestoCandOtherLanguages.pdf] (DOI: 10.1109/MCSE.2008.94).
+Uses approach outlined in [Pletzer et al (2008)](https://www.computer.org/cms/ComputingNow/homepage/0808/ExposingFortranDerivedTypestoCandOtherLanguages.pdf) (DOI: 10.1109/MCSE.2008.94).
